test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-owned-from-nonnil-shared.good
init-field-dflt-nonnil-owned-from-nonnil-shared.chpl:11: error: cannot initialize 'owned MyClass' from a 'shared MyClass'
